docs(amgular.json): adiciona o caminho correto do scss no arquivo angular.json

--- a/ts/angular.json
+++ b/ts/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/assets/scss/globals/_styles.scss"
             ],
             "scripts": []
           },
